--- a/app/src/main/res/drawable/pbirdclickpanel.xml
+++ b/app/src/main/res/drawable/pbirdclickpanel.xml
@@ -10,8 +10,8 @@
             android:shape = "rectangle"
             xmlns:android = "http://schemas.android.com/apk/res/android" >
             <gradient
-                android:startColor = "#51299d"
-                android:endColor = "#8f05c4"
+                android:startColor = "#FF9800"
+                android:endColor = "#BD22F8"
                 android:angle = "0"
                 android:type = "linear" />
         </shape>
