--- a/app/src/main/res/drawable/bcard.xml
+++ b/app/src/main/res/drawable/bcard.xml
@@ -9,6 +9,6 @@
         android:width="180dp"
         android:height="180dp"
         android:gravity="center"
-        android:drawable="@drawable/bbird"
+        android:drawable="@drawable/king1"
         />
 </layer-list>
