--- a/app/src/main/res/drawable/rcard.xml
+++ b/app/src/main/res/drawable/rcard.xml
@@ -9,6 +9,6 @@
         android:width="180dp"
         android:height="180dp"
         android:gravity="center"
-        android:drawable="@drawable/rbird"
+        android:drawable="@drawable/king3"
         />
 </layer-list>
